parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TEXT
    END_SPLIT
    AMP
    ROUND
    BEGIN
    LIMITS
    BEGIN_EQUATION
    DISPLAYSTYLE
    TRUNC
    END
    CARD
    END_EQUATION
    MATHCLAP
    LENGTH
    QUAD
    BEGIN_SPLIT

Grammar

Rule 0     S' -> LP
Rule 1     LP -> Objective
Rule 2     LP -> Objective Constraints
Rule 3     LP -> Objective BACKSLASHES Constraints
Rule 4     LP -> error BACKSLASHES
Rule 5     Objective -> MAXIMIZE LinearExpression
Rule 6     Objective -> MINIMIZE LinearExpression
Rule 7     Objective -> MAXIMIZE LinearExpression COMMA IndexingExpression
Rule 8     Objective -> MINIMIZE LinearExpression COMMA IndexingExpression
Rule 9     Constraints -> SUBJECTTO ConstraintList
Rule 10    ConstraintList -> ConstraintList BACKSLASHES Constraint
Rule 11    ConstraintList -> ConstraintList BACKSLASHES
Rule 12    ConstraintList -> Constraint
Rule 13    ConstraintList -> error BACKSLASHES
Rule 14    Constraint -> ConstraintExpression FOR IndexingExpression
Rule 15    Constraint -> ConstraintExpression COMMA IndexingExpression
Rule 16    Constraint -> ConstraintExpression
Rule 17    Constraint -> error FOR
Rule 18    Constraint -> error COMMA
Rule 19    ConstraintExpression -> LinearExpression EQ LinearExpression
Rule 20    ConstraintExpression -> LinearExpression LE LinearExpression
Rule 21    ConstraintExpression -> LinearExpression GE LinearExpression
Rule 22    ConstraintExpression -> LBRACKET NumericExpression RBRACKET LE LinearExpression LE NumericExpression
Rule 23    ConstraintExpression -> LBRACKET NumericExpression RBRACKET GE LinearExpression GE NumericExpression
Rule 24    ConstraintExpression -> error EQ
Rule 25    ConstraintExpression -> error LE
Rule 26    ConstraintExpression -> error GE
Rule 27    LinearExpression -> Variable
Rule 28    LinearExpression -> NUMBER
Rule 29    LinearExpression -> PLUS LinearExpression
Rule 30    LinearExpression -> MINUS LinearExpression
Rule 31    LinearExpression -> LPAREN LinearExpression RPAREN
Rule 32    LinearExpression -> LPAREN error RPAREN
Rule 33    LinearExpression -> LinearExpression PLUS LinearExpression
Rule 34    LinearExpression -> LinearExpression MINUS LinearExpression
Rule 35    LinearExpression -> LBRACKET NumericExpression RBRACKET TIMES LinearExpression
Rule 36    LinearExpression -> LinearExpression TIMES NumericExpression
Rule 37    LinearExpression -> LinearExpression DIVIDE NumericExpression
Rule 38    LinearExpression -> error PLUS
Rule 39    LinearExpression -> error MINUS
Rule 40    LinearExpression -> error TIMES
Rule 41    LinearExpression -> error DIVIDE
Rule 42    LinearExpression -> SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
Rule 43    LinearExpression -> SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
Rule 44    LinearExpression -> SUM UNDERLINE LBRACE error RBRACE
Rule 45    NumericExpression -> NumericExpression PLUS NumericExpression
Rule 46    NumericExpression -> NumericExpression MINUS NumericExpression
Rule 47    NumericExpression -> NumericExpression TIMES NumericExpression
Rule 48    NumericExpression -> NumericExpression DIVIDE NumericExpression
Rule 49    NumericExpression -> NumericExpression MOD NumericExpression
Rule 50    NumericExpression -> NumericExpression CARET NumericExpression
Rule 51    NumericExpression -> error PLUS
Rule 52    NumericExpression -> error MINUS
Rule 53    NumericExpression -> error TIMES
Rule 54    NumericExpression -> error DIVIDE
Rule 55    NumericExpression -> error MOD
Rule 56    NumericExpression -> error CARET
Rule 57    NumericExpression -> NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE NumericExpression
Rule 58    NumericExpression -> NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE NumericExpression
Rule 59    NumericExpression -> NumericOperator UNDERLINE LBRACE error RBRACE
Rule 60    NumericExpression -> MINUS NumericExpression
Rule 61    NumericExpression -> PLUS NumericExpression
Rule 62    NumericExpression -> LPAREN NumericExpression RPAREN
Rule 63    NumericExpression -> Variable
Rule 64    NumericExpression -> NUMBER
Rule 65    NumericExpression -> LPAREN error RPAREN
Rule 66    NumericOperator -> SUM
Rule 67    NumericOperator -> PROD
Rule 68    NumericOperator -> MAX
Rule 69    NumericOperator -> MIN
Rule 70    NumericExpression -> SQRT LBRACE NumericExpression RBRACE
Rule 71    NumericExpression -> LFLOOR NumericExpression RFLOOR
Rule 72    NumericExpression -> LCEIL NumericExpression RCEIL
Rule 73    NumericExpression -> PIPE NumericExpression PIPE
Rule 74    NumericExpression -> MAX LPAREN NumericExpression RPAREN
Rule 75    NumericExpression -> MIN LPAREN NumericExpression RPAREN
Rule 76    NumericExpression -> SIN LPAREN NumericExpression RPAREN
Rule 77    NumericExpression -> COS LPAREN NumericExpression RPAREN
Rule 78    NumericExpression -> LOG LPAREN NumericExpression RPAREN
Rule 79    NumericExpression -> LN LPAREN NumericExpression RPAREN
Rule 80    NumericExpression -> EXP LPAREN NumericExpression RPAREN
Rule 81    NumericExpression -> ARCTAN LPAREN NumericExpression RPAREN
Rule 82    NumericExpression -> SQRT LBRACE error RBRACE
Rule 83    NumericExpression -> LFLOOR error RFLOOR
Rule 84    NumericExpression -> LCEIL error RCEIL
Rule 85    IndexingExpression -> EntryIndexingExpression
Rule 86    IndexingExpression -> IndexingExpression COLON LogicalExpression
Rule 87    IndexingExpression -> IndexingExpression COMMA EntryIndexingExpression
Rule 88    IndexingExpression -> IndexingExpression COMMA BACKSLASHES EntryIndexingExpression
Rule 89    IndexingExpression -> error COMMA
Rule 90    EntryIndexingExpression -> ValueList IN SetExpression
Rule 91    EntryIndexingExpression -> TupleList IN SetExpression
Rule 92    EntryIndexingExpression -> Variable IN SetExpression
Rule 93    EntryIndexingExpression -> error IN
Rule 94    EntryIndexingExpression -> error COLON
Rule 95    EntryIndexingExpression -> Variable EQ NUMBER
Rule 96    EntryIndexingExpression -> Variable EQ Variable
Rule 97    EntryIndexingExpression -> Variable EQ Range
Rule 98    EntryIndexingExpression -> Variable NEQ NumericExpression
Rule 99    EntryIndexingExpression -> Variable LE NumericExpression
Rule 100   EntryIndexingExpression -> Variable GE NumericExpression
Rule 101   EntryIndexingExpression -> Variable LT NumericExpression
Rule 102   EntryIndexingExpression -> Variable GT NumericExpression
Rule 103   EntryIndexingExpression -> error EQ
Rule 104   EntryIndexingExpression -> error NEQ
Rule 105   EntryIndexingExpression -> error LE
Rule 106   EntryIndexingExpression -> error GE
Rule 107   EntryIndexingExpression -> error LT
Rule 108   EntryIndexingExpression -> error GT
Rule 109   LogicalExpression -> EntryLogicalExpression
Rule 110   LogicalExpression -> LogicalExpression OR EntryLogicalExpression
Rule 111   LogicalExpression -> LogicalExpression AND EntryLogicalExpression
Rule 112   EntryLogicalExpression -> NOT EntryLogicalExpression
Rule 113   EntryLogicalExpression -> LPAREN LogicalExpression RPAREN
Rule 114   EntryLogicalExpression -> NumericExpression LT NumericExpression
Rule 115   EntryLogicalExpression -> NumericExpression LE NumericExpression
Rule 116   EntryLogicalExpression -> NumericExpression EQ NumericExpression
Rule 117   EntryLogicalExpression -> NumericExpression GE NumericExpression
Rule 118   EntryLogicalExpression -> NumericExpression NEQ NumericExpression
Rule 119   EntryLogicalExpression -> ValueList IN SetExpression
Rule 120   EntryLogicalExpression -> TupleList IN SetExpression
Rule 121   EntryLogicalExpression -> Variable IN SetExpression
Rule 122   EntryLogicalExpression -> ValueList NOTIN SetExpression
Rule 123   EntryLogicalExpression -> TupleList NOTIN SetExpression
Rule 124   EntryLogicalExpression -> Variable NOTIN SetExpression
Rule 125   EntryLogicalExpression -> SetExpression SUBSET SetExpression
Rule 126   EntryLogicalExpression -> SetExpression NOTSUBSET SetExpression
Rule 127   EntryLogicalExpression -> FORALL LBRACE IndexingExpression RBRACE LogicalExpression
Rule 128   EntryLogicalExpression -> EXISTS LBRACE IndexingExpression RBRACE LogicalExpression
Rule 129   SetExpression -> SetExpression DIFF SetExpression
Rule 130   SetExpression -> SetExpression SYMDIFF SetExpression
Rule 131   SetExpression -> SetExpression UNION SetExpression
Rule 132   SetExpression -> SetExpression INTER SetExpression
Rule 133   SetExpression -> SetExpression CROSS SetExpression
Rule 134   SetExpression -> error DIFF
Rule 135   SetExpression -> error SYMDIFF
Rule 136   SetExpression -> error UNION
Rule 137   SetExpression -> error INTER
Rule 138   SetExpression -> error CROSS
Rule 139   SetExpression -> LBRACE ValueList RBRACE
Rule 140   SetExpression -> LBRACE Range RBRACE
Rule 141   SetExpression -> Range
Rule 142   SetExpression -> Variable
Rule 143   SetExpression -> NATURALSET
Rule 144   SetExpression -> INTEGERSET
Rule 145   SetExpression -> REALSET
Rule 146   SetExpression -> LBRACE error RBRACE
Rule 147   SetExpression -> Variable LPAREN ValueList RPAREN
Rule 148   SetExpression -> Variable LBRACE ValueList RBRACE
Rule 149   SetExpression -> Variable LBRACE Variable RBRACE
Rule 150   SetExpression -> Variable LPAREN Variable RPAREN
Rule 151   SetExpression -> error LBRACE
Rule 152   SetExpression -> error LPAREN
Rule 153   Range -> Variable DOTS NumericExpression
Rule 154   Range -> NUMBER DOTS NumericExpression
Rule 155   Range -> error DOTS
Rule 156   Range -> error COMMA
Rule 157   Variable -> ID UNDERLINE LBRACE ValueList RBRACE
Rule 158   Variable -> ID UNDERLINE LBRACE Variable RBRACE
Rule 159   Variable -> ID UNDERLINE LBRACE NUMBER RBRACE
Rule 160   Variable -> ID
Rule 161   ValueList -> NUMBER COMMA NUMBER
Rule 162   ValueList -> Variable COMMA Variable
Rule 163   ValueList -> NUMBER COMMA Variable
Rule 164   ValueList -> Variable COMMA NUMBER
Rule 165   ValueList -> ValueList COMMA NUMBER
Rule 166   ValueList -> ValueList COMMA Variable
Rule 167   ValueList -> error COMMA
Rule 168   TupleList -> LPAREN ValueList RPAREN
Rule 169   ValueList -> error RPAREN

Terminals, with rules where they appear

AMP                  : 
AND                  : 111
ARCTAN               : 81
BACKSLASHES          : 3 4 10 11 13 88
BEGIN                : 
BEGIN_EQUATION       : 
BEGIN_SPLIT          : 
CARD                 : 
CARET                : 42 50 56 57
COLON                : 86 94
COMMA                : 7 8 15 18 87 88 89 156 161 162 163 164 165 166 167
COS                  : 77
CROSS                : 133 138
DIFF                 : 129 134
DISPLAYSTYLE         : 
DIVIDE               : 37 41 48 54
DOTS                 : 153 154 155
END                  : 
END_EQUATION         : 
END_SPLIT            : 
EQ                   : 19 24 95 96 97 103 116
EXISTS               : 128
EXP                  : 80
FOR                  : 14 17
FORALL               : 127
GE                   : 21 23 23 26 100 106 117
GT                   : 102 108
ID                   : 157 158 159 160
IN                   : 90 91 92 93 119 120 121
INTEGERSET           : 144
INTER                : 132 137
LBRACE               : 42 42 43 44 57 57 58 59 70 82 127 128 139 140 146 148 149 151 157 158 159
LBRACKET             : 22 23 35
LCEIL                : 72 84
LE                   : 20 22 22 25 99 105 115
LENGTH               : 
LFLOOR               : 71 83
LIMITS               : 
LN                   : 79
LOG                  : 78
LPAREN               : 31 32 62 65 74 75 76 77 78 79 80 81 113 147 150 152 168
LT                   : 101 107 114
MATHCLAP             : 
MAX                  : 68 74
MAXIMIZE             : 5 7
MIN                  : 69 75
MINIMIZE             : 6 8
MINUS                : 30 34 39 46 52 60
MOD                  : 49 55
NATURALSET           : 143
NEQ                  : 98 104 118
NOT                  : 112
NOTIN                : 122 123 124
NOTSUBSET            : 126
NUMBER               : 28 64 95 154 159 161 161 163 164 165
OR                   : 110
PIPE                 : 73 73
PLUS                 : 29 33 38 45 51 61
PROD                 : 67
QUAD                 : 
RBRACE               : 42 42 43 44 57 57 58 59 70 82 127 128 139 140 146 148 149 157 158 159
RBRACKET             : 22 23 35
RCEIL                : 72 84
REALSET              : 145
RFLOOR               : 71 83
ROUND                : 
RPAREN               : 31 32 62 65 74 75 76 77 78 79 80 81 113 147 150 168 169
SIN                  : 76
SQRT                 : 70 82
SUBJECTTO            : 9
SUBSET               : 125
SUM                  : 42 43 44 66
SYMDIFF              : 130 135
TEXT                 : 
TIMES                : 35 36 40 47 53
TRUNC                : 
UNDERLINE            : 42 43 44 57 58 59 157 158 159
UNION                : 131 136
error                : 4 13 17 18 24 25 26 32 38 39 40 41 44 51 52 53 54 55 56 59 65 82 83 84 89 93 94 103 104 105 106 107 108 134 135 136 137 138 146 151 152 155 156 167 169

Nonterminals, with rules where they appear

Constraint           : 10 12
ConstraintExpression : 14 15 16
ConstraintList       : 9 10 11
Constraints          : 2 3
EntryIndexingExpression : 85 87 88
EntryLogicalExpression : 109 110 111 112
IndexingExpression   : 7 8 14 15 42 43 57 58 86 87 88 127 128
LP                   : 0
LinearExpression     : 5 6 7 8 19 19 20 20 21 21 22 23 29 30 31 33 33 34 34 35 36 37 42 43
LogicalExpression    : 86 110 111 113 127 128
NumericExpression    : 22 22 23 23 35 36 37 42 45 45 46 46 47 47 48 48 49 49 50 50 57 57 58 60 61 62 70 71 72 73 74 75 76 77 78 79 80 81 98 99 100 101 102 114 114 115 115 116 116 117 117 118 118 153 154
NumericOperator      : 57 58 59
Objective            : 1 2 3
Range                : 97 140 141
SetExpression        : 90 91 92 119 120 121 122 123 124 125 125 126 126 129 129 130 130 131 131 132 132 133 133
TupleList            : 91 120 123
ValueList            : 90 119 122 139 147 148 157 165 166 168
Variable             : 27 63 92 95 96 96 97 98 99 100 101 102 121 124 142 147 148 149 149 150 150 153 158 162 162 163 164 166

Parsing method: LALR

state 0

    (0) S' -> . LP
    (1) LP -> . Objective
    (2) LP -> . Objective Constraints
    (3) LP -> . Objective BACKSLASHES Constraints
    (4) LP -> . error BACKSLASHES
    (5) Objective -> . MAXIMIZE LinearExpression
    (6) Objective -> . MINIMIZE LinearExpression
    (7) Objective -> . MAXIMIZE LinearExpression COMMA IndexingExpression
    (8) Objective -> . MINIMIZE LinearExpression COMMA IndexingExpression

    error           shift and go to state 4
    MAXIMIZE        shift and go to state 3
    MINIMIZE        shift and go to state 2

    Objective                      shift and go to state 5
    LP                             shift and go to state 1

state 1

    (0) S' -> LP .



state 2

    (6) Objective -> MINIMIZE . LinearExpression
    (8) Objective -> MINIMIZE . LinearExpression COMMA IndexingExpression
    (27) LinearExpression -> . Variable
    (28) LinearExpression -> . NUMBER
    (29) LinearExpression -> . PLUS LinearExpression
    (30) LinearExpression -> . MINUS LinearExpression
    (31) LinearExpression -> . LPAREN LinearExpression RPAREN
    (32) LinearExpression -> . LPAREN error RPAREN
    (33) LinearExpression -> . LinearExpression PLUS LinearExpression
    (34) LinearExpression -> . LinearExpression MINUS LinearExpression
    (35) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (36) LinearExpression -> . LinearExpression TIMES NumericExpression
    (37) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (38) LinearExpression -> . error PLUS
    (39) LinearExpression -> . error MINUS
    (40) LinearExpression -> . error TIMES
    (41) LinearExpression -> . error DIVIDE
    (42) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 12

state 3

    (5) Objective -> MAXIMIZE . LinearExpression
    (7) Objective -> MAXIMIZE . LinearExpression COMMA IndexingExpression
    (27) LinearExpression -> . Variable
    (28) LinearExpression -> . NUMBER
    (29) LinearExpression -> . PLUS LinearExpression
    (30) LinearExpression -> . MINUS LinearExpression
    (31) LinearExpression -> . LPAREN LinearExpression RPAREN
    (32) LinearExpression -> . LPAREN error RPAREN
    (33) LinearExpression -> . LinearExpression PLUS LinearExpression
    (34) LinearExpression -> . LinearExpression MINUS LinearExpression
    (35) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (36) LinearExpression -> . LinearExpression TIMES NumericExpression
    (37) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (38) LinearExpression -> . error PLUS
    (39) LinearExpression -> . error MINUS
    (40) LinearExpression -> . error TIMES
    (41) LinearExpression -> . error DIVIDE
    (42) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 16

state 4

    (4) LP -> error . BACKSLASHES

    BACKSLASHES     shift and go to state 17


state 5

    (1) LP -> Objective .
    (2) LP -> Objective . Constraints
    (3) LP -> Objective . BACKSLASHES Constraints
    (9) Constraints -> . SUBJECTTO ConstraintList

    $end            reduce using rule 1 (LP -> Objective .)
    BACKSLASHES     shift and go to state 19
    SUBJECTTO       shift and go to state 18

    Constraints                    shift and go to state 20

state 6

    (42) LinearExpression -> SUM . UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> SUM . UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> SUM . UNDERLINE LBRACE error RBRACE

    UNDERLINE       shift and go to state 21


state 7

    (28) LinearExpression -> NUMBER .

    PLUS            reduce using rule 28 (LinearExpression -> NUMBER .)
    MINUS           reduce using rule 28 (LinearExpression -> NUMBER .)
    TIMES           reduce using rule 28 (LinearExpression -> NUMBER .)
    DIVIDE          reduce using rule 28 (LinearExpression -> NUMBER .)
    FOR             reduce using rule 28 (LinearExpression -> NUMBER .)
    COMMA           reduce using rule 28 (LinearExpression -> NUMBER .)
    BACKSLASHES     reduce using rule 28 (LinearExpression -> NUMBER .)
    $end            reduce using rule 28 (LinearExpression -> NUMBER .)
    SUBJECTTO       reduce using rule 28 (LinearExpression -> NUMBER .)
    RPAREN          reduce using rule 28 (LinearExpression -> NUMBER .)
    EQ              reduce using rule 28 (LinearExpression -> NUMBER .)
    LE              reduce using rule 28 (LinearExpression -> NUMBER .)
    GE              reduce using rule 28 (LinearExpression -> NUMBER .)


state 8

    (35) LinearExpression -> LBRACKET . NumericExpression RBRACKET TIMES LinearExpression
    (45) NumericExpression -> . NumericExpression PLUS NumericExpression
    (46) NumericExpression -> . NumericExpression MINUS NumericExpression
    (47) NumericExpression -> . NumericExpression TIMES NumericExpression
    (48) NumericExpression -> . NumericExpression DIVIDE NumericExpression
    (49) NumericExpression -> . NumericExpression MOD NumericExpression
    (50) NumericExpression -> . NumericExpression CARET NumericExpression
    (51) NumericExpression -> . error PLUS
    (52) NumericExpression -> . error MINUS
    (53) NumericExpression -> . error TIMES
    (54) NumericExpression -> . error DIVIDE
    (55) NumericExpression -> . error MOD
    (56) NumericExpression -> . error CARET
    (57) NumericExpression -> . NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE NumericExpression
    (58) NumericExpression -> . NumericOperator UNDERLINE LBRACE IndexingExpression RBRACE NumericExpression
    (59) NumericExpression -> . NumericOperator UNDERLINE LBRACE error RBRACE
    (60) NumericExpression -> . MINUS NumericExpression
    (61) NumericExpression -> . PLUS NumericExpression
    (62) NumericExpression -> . LPAREN NumericExpression RPAREN
    (63) NumericExpression -> . Variable
    (64) NumericExpression -> . NUMBER
    (65) NumericExpression -> . LPAREN error RPAREN
    (70) NumericExpression -> . SQRT LBRACE NumericExpression RBRACE
    (71) NumericExpression -> . LFLOOR NumericExpression RFLOOR
    (72) NumericExpression -> . LCEIL NumericExpression RCEIL
    (73) NumericExpression -> . PIPE NumericExpression PIPE
    (74) NumericExpression -> . MAX LPAREN NumericExpression RPAREN
    (75) NumericExpression -> . MIN LPAREN NumericExpression RPAREN
    (76) NumericExpression -> . SIN LPAREN NumericExpression RPAREN
    (77) NumericExpression -> . COS LPAREN NumericExpression RPAREN
    (78) NumericExpression -> . LOG LPAREN NumericExpression RPAREN
    (79) NumericExpression -> . LN LPAREN NumericExpression RPAREN
    (80) NumericExpression -> . EXP LPAREN NumericExpression RPAREN
    (81) NumericExpression -> . ARCTAN LPAREN NumericExpression RPAREN
    (82) NumericExpression -> . SQRT LBRACE error RBRACE
    (83) NumericExpression -> . LFLOOR error RFLOOR
    (84) NumericExpression -> . LCEIL error RCEIL
    (66) NumericOperator -> . SUM
    (67) NumericOperator -> . PROD
    (68) NumericOperator -> . MAX
    (69) NumericOperator -> . MIN
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    error           shift and go to state 41
    MINUS           shift and go to state 29
    PLUS            shift and go to state 34
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 27
    SQRT            shift and go to state 39
    LFLOOR          shift and go to state 22
    LCEIL           shift and go to state 36
    PIPE            shift and go to state 33
    MAX             shift and go to state 38
    MIN             shift and go to state 25
    SIN             shift and go to state 32
    COS             shift and go to state 31
    LOG             shift and go to state 23
    LN              shift and go to state 30
    EXP             shift and go to state 28
    ARCTAN          shift and go to state 40
    SUM             shift and go to state 26
    PROD            shift and go to state 42
    ID              shift and go to state 14

    NumericOperator                shift and go to state 24
    Variable                       shift and go to state 35
    NumericExpression              shift and go to state 43

state 9

    (30) LinearExpression -> MINUS . LinearExpression
    (27) LinearExpression -> . Variable
    (28) LinearExpression -> . NUMBER
    (29) LinearExpression -> . PLUS LinearExpression
    (30) LinearExpression -> . MINUS LinearExpression
    (31) LinearExpression -> . LPAREN LinearExpression RPAREN
    (32) LinearExpression -> . LPAREN error RPAREN
    (33) LinearExpression -> . LinearExpression PLUS LinearExpression
    (34) LinearExpression -> . LinearExpression MINUS LinearExpression
    (35) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (36) LinearExpression -> . LinearExpression TIMES NumericExpression
    (37) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (38) LinearExpression -> . error PLUS
    (39) LinearExpression -> . error MINUS
    (40) LinearExpression -> . error TIMES
    (41) LinearExpression -> . error DIVIDE
    (42) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 44

state 10

    (27) LinearExpression -> Variable .

    PLUS            reduce using rule 27 (LinearExpression -> Variable .)
    MINUS           reduce using rule 27 (LinearExpression -> Variable .)
    TIMES           reduce using rule 27 (LinearExpression -> Variable .)
    DIVIDE          reduce using rule 27 (LinearExpression -> Variable .)
    FOR             reduce using rule 27 (LinearExpression -> Variable .)
    COMMA           reduce using rule 27 (LinearExpression -> Variable .)
    BACKSLASHES     reduce using rule 27 (LinearExpression -> Variable .)
    $end            reduce using rule 27 (LinearExpression -> Variable .)
    SUBJECTTO       reduce using rule 27 (LinearExpression -> Variable .)
    RPAREN          reduce using rule 27 (LinearExpression -> Variable .)
    EQ              reduce using rule 27 (LinearExpression -> Variable .)
    LE              reduce using rule 27 (LinearExpression -> Variable .)
    GE              reduce using rule 27 (LinearExpression -> Variable .)


state 11

    (29) LinearExpression -> PLUS . LinearExpression
    (27) LinearExpression -> . Variable
    (28) LinearExpression -> . NUMBER
    (29) LinearExpression -> . PLUS LinearExpression
    (30) LinearExpression -> . MINUS LinearExpression
    (31) LinearExpression -> . LPAREN LinearExpression RPAREN
    (32) LinearExpression -> . LPAREN error RPAREN
    (33) LinearExpression -> . LinearExpression PLUS LinearExpression
    (34) LinearExpression -> . LinearExpression MINUS LinearExpression
    (35) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (36) LinearExpression -> . LinearExpression TIMES NumericExpression
    (37) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (38) LinearExpression -> . error PLUS
    (39) LinearExpression -> . error MINUS
    (40) LinearExpression -> . error TIMES
    (41) LinearExpression -> . error DIVIDE
    (42) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    error           shift and go to state 15
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 45

state 12

    (6) Objective -> MINIMIZE LinearExpression .
    (8) Objective -> MINIMIZE LinearExpression . COMMA IndexingExpression
    (33) LinearExpression -> LinearExpression . PLUS LinearExpression
    (34) LinearExpression -> LinearExpression . MINUS LinearExpression
    (36) LinearExpression -> LinearExpression . TIMES NumericExpression
    (37) LinearExpression -> LinearExpression . DIVIDE NumericExpression

    BACKSLASHES     reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    SUBJECTTO       reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    $end            reduce using rule 6 (Objective -> MINIMIZE LinearExpression .)
    COMMA           shift and go to state 47
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 50


state 13

    (31) LinearExpression -> LPAREN . LinearExpression RPAREN
    (32) LinearExpression -> LPAREN . error RPAREN
    (27) LinearExpression -> . Variable
    (28) LinearExpression -> . NUMBER
    (29) LinearExpression -> . PLUS LinearExpression
    (30) LinearExpression -> . MINUS LinearExpression
    (31) LinearExpression -> . LPAREN LinearExpression RPAREN
    (32) LinearExpression -> . LPAREN error RPAREN
    (33) LinearExpression -> . LinearExpression PLUS LinearExpression
    (34) LinearExpression -> . LinearExpression MINUS LinearExpression
    (35) LinearExpression -> . LBRACKET NumericExpression RBRACKET TIMES LinearExpression
    (36) LinearExpression -> . LinearExpression TIMES NumericExpression
    (37) LinearExpression -> . LinearExpression DIVIDE NumericExpression
    (38) LinearExpression -> . error PLUS
    (39) LinearExpression -> . error MINUS
    (40) LinearExpression -> . error TIMES
    (41) LinearExpression -> . error DIVIDE
    (42) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE CARET LBRACE NumericExpression RBRACE LinearExpression
    (43) LinearExpression -> . SUM UNDERLINE LBRACE IndexingExpression RBRACE LinearExpression
    (44) LinearExpression -> . SUM UNDERLINE LBRACE error RBRACE
    (157) Variable -> . ID UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> . ID UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> . ID UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> . ID

    error           shift and go to state 52
    NUMBER          shift and go to state 7
    PLUS            shift and go to state 11
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 13
    LBRACKET        shift and go to state 8
    SUM             shift and go to state 6
    ID              shift and go to state 14

    Variable                       shift and go to state 10
    LinearExpression               shift and go to state 51

state 14

    (157) Variable -> ID . UNDERLINE LBRACE ValueList RBRACE
    (158) Variable -> ID . UNDERLINE LBRACE Variable RBRACE
    (159) Variable -> ID . UNDERLINE LBRACE NUMBER RBRACE
    (160) Variable -> ID .
